--- a/linnea.html
+++ b/linnea.html
@@ -7,17 +7,7 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-    <h2>Git is so fun! </h2>
-<p>Move the mouse over the button to open the dropdown menu, choose a page.</p>
-
-<div class="dropdown">
-  <button class="dropbtn">Menu</button>
-  <div class="dropdown-content">
-  <a href="#">Hanna</a>
-  <a href="linnea.html">Linnéa</a>
-  <a href="#">Rikke</a>
-  </div>
-</div>
-
+    <h1>Hej Niels!</h1>
+    <p></p>
 </body>
 </html>
