added menuitems and stylesheet

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <div class="dropdown-content">
   <a href="#">Hanna</a>
   <a href="linnea.html">Linnéa</a>
-  <a href="#">Rikke</a>
+  <a href="rikke.html">Rikke</a>
   </div>
 </div>
 
