--- a/rikke.html
+++ b/rikke.html
@@ -1,22 +1,21 @@
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Rikke</title>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-    <h1>Noget om ugler</h1>
-    
-</body>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Rikke</title>
-</head>
-<body>
+        <div class="dropdown">
+                <button class="dropbtn">Menu</button>
+                <div class="dropdown-content">
+                <a href="#">Hanna</a>
+                <a href="linnea.html">Linnéa</a>
+                <a href="rikke.html">Rikke</a>
+                </div>
+              </div>
     <h1>Noget om ugler</h1>
     <img src="css/images/batman-owl-robin-digital-art-km-1680x1050.jpg">
     <p>Ugler har generelt store fremadrettede øjne og et fremragende syn. 
